fixed dark mode map views

--- a/patient_Dashboard/style.css
+++ b/patient_Dashboard/style.css
@@ -1274,7 +1274,7 @@ body.dark-mode .map-overlay {
 }
 
 body.dark-mode .leaflet-tile-pane {
-    filter: brightness(0.5) invert(1) contrast(3) hue-rotate(200deg) saturate(0.25) brightness(0.65);
+    filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%) saturate(1.3);
 }
 
 .map-live-badge {
